assingments/part1/exercise_113/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-2024-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-2024-project
  template:
    metadata:
      labels:
        app: kubernetes-2024-project
    spec:
      volumes:
        - name: shared-pv
          persistentVolumeClaim:
            claimName: sharefile-claim
      containers:
        - name: kubernetes-2024-project
          image: juanchobanano13/kubernetes-2024-project:v0.1.3
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-pv
            mountPath: /usr/src/app/files
