assingments/part1/exercise_113/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-2024-project-svc
spec:
  type: ClusterIP
  selector:
    app: kubernetes-2024-project
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 8003
